--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,4 @@ HOST=0.0.0.0
 PORT=3000
 ENVIRONMENT=production
 ACCESS_TOKEN_SECRET=your-access-token-secret
-WEBHOOK_URL=http://localhost:3001/webhook
+WEBHOOK_URL=https://gorkemmts.app.n8n.cloud/webhook-test/879750d1-67e4-4964-b74c-892e8ffad581
